added section sobre and footer

--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html lang="pt-br">
   <head>
     <link rel="stylesheet" href="css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/14298cde5f.js"
+      crossorigin="anonymous"
+    ></script>
     <meta charset="UTF-8" />
     <title>Rocky - Marketing Digital com Performance</title>
   </head>
 
   <body>
     <header>
-      <img src="./img/web/logo.png" alt="Logo da Rocky" />
+      <a href="./index.html"
+        ><img src="./img/web/logo.png" alt="Logo da Rocky"
+      /></a>
+
       <div>
         <h1>
           Full digital <br />
@@ -41,10 +48,59 @@
           Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
           nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
           sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-          rebum. Stet clita kasd gubergren, no sea takimata sanctus est.
+          rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
+          ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+          sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+          dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+          et justo duo dolores et ea rebum. Stet clita
         </p>
       </article>
     </section>
+
+    <footer>
+      <div class="logos_rodape">
+        <img src="./img/web/logo.png" alt="Logo da Rocky" />
+        <div>
+          <i class="fab fa-facebook fa-4x"></i>
+          <i class="fab fa-linkedin-in fa-2x"></i>
+        </div>
+      </div>
+      <div class="contato_rodape">
+        <i class="fa fa-solid fa-envelope fa-3x"></i>
+        <a href="mailto:contato@rocky.ag" target="_blank">contato@rocky.ag</a>
+        <span>|</span>
+        <i class="fa fa-solid fa-rotate-90 fa-phone fa-3x"></i>
+        <a href="tel:+551533211105" target="_blank">(15) 3321-1105</a>
+      </div>
+      <div class="local-rodape">
+        <img src="./img/content/pin.png" />
+        <a href="https://goo.gl/maps/2DEuFJP4eLojpk246" target="_blank"
+          >R. Romeu do Nascimento, 247 - Jardim Portal da Colina, Sorocaba - SP
+          18047-410 - 2º andar</a
+        >
+      </div>
+      <div class="rodape-texto">
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+          nonumy eirmod tempor invidunt ut labore et dolore
+        </p>
+        <p>
+          gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+          Lorem ipsum dolor sit amet,
+        </p>
+        <p>
+          ccusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
+        </p>
+      </div>
+
+      <form>
+        <input type="text" placeholder="Nome" />
+        <input type="email" placeholder="E-mail" />
+        <input type="text" placeholder="Investimento Mensal" />
+        <textarea placeholder="Mensagem"></textarea>
+        <button>Enviar mensagem</button>
+      </form>
+    </footer>
   </body>
 
   <script src="js/script.js"></script>
