:construction: testing @media and hamburger menu

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
     <script
       src="https://kit.fontawesome.com/14298cde5f.js"
       crossorigin="anonymous"
@@ -15,8 +15,16 @@
       <a href="./index.html"
         ><img src="./img/web/logo.png" alt="Logo da Rocky"
       /></a>
+      <nav>
+        <div class="click_hamburguer">
+          <span class="line"></span>
+          <span class="line"></span>
+          <span class="line"></span>
+        </div>
+        >
+      </nav>
 
-      <div>
+      <div class="text_header">
         <h1>
           Full digital <br />
           Performance
