:construction: added menu open/close

--- a/index.html
+++ b/index.html
@@ -11,18 +11,31 @@
   </head>
 
   <body>
-    <header>
-      <a href="./index.html"
-        ><img src="./img/web/logo.png" alt="Logo da Rocky"
-      /></a>
+    <header id="home">
       <nav>
-        <div class="click_hamburguer">
+        <div id="click_hamburguer">
           <span class="line"></span>
           <span class="line"></span>
           <span class="line"></span>
         </div>
-        >
+        <ul id="nav_list">
+          <div id="click_close">
+            <span class="close_line"></span>
+            <span class="close_line"></span>
+          </div>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#sobre">Sobre a rocky</a></li>
+          <li><a href="#servicos">Serviços</a><a href=""> ▼</a></li>
+          <li><a href="#diferenciais">Diferenciais</a><a href=""> ▼</a></li>
+          <li><a href="#">Trabalhe conosco</a></li>
+          <li><a href="#contato">Contato</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
       </nav>
+
+      <a href="./index.html"
+        ><img src="./img/web/logo.png" alt="Logo da Rocky"
+      /></a>
 
       <div class="text_header">
         <h1>
@@ -37,7 +50,7 @@
         <button>entre em contato agora</button>
       </div>
     </header>
-    <section>
+    <section id="sobre">
       <h1>Sobre</h1>
       <article>
         <p>
@@ -65,7 +78,7 @@
       </article>
     </section>
 
-    <section class="section-servicos">
+    <section class="section-servicos" id="servicos">
       <h1>Serviços</h1>
       <div>
         <h5>Serviços</h5>
@@ -108,7 +121,7 @@
       </div>
     </section>
 
-    <section class="section-diferenciais">
+    <section class="section-diferenciais" id="diferenciais">
       <h1>DIFERENCIAIS</h1>
       <div>
         <p>
@@ -141,7 +154,7 @@
           <i class="fab fa-linkedin-in fa-2x"></i>
         </div>
       </div>
-      <div class="contato_rodape">
+      <div class="contato_rodape" id="contato">
         <i class="fa fa-solid fa-envelope fa-3x"></i>
         <a href="mailto:contato@rocky.ag" target="_blank">contato@rocky.ag</a>
         <span>|</span>
