:recycle: refactor code and media implementations

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <!-- <link rel="stylesheet" href="css/style.css" type="text/css" /> -->
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <script
       src="https://kit.fontawesome.com/14298cde5f.js"
@@ -13,6 +14,9 @@
   <body>
     <header id="home">
       <nav>
+        <a href="./index.html"
+          ><img src="./img/web/logo.png" alt="Logo da Rocky"
+        /></a>
         <div id="click_hamburguer">
           <span class="line"></span>
           <span class="line"></span>
@@ -23,19 +27,14 @@
             <span class="close_line"></span>
             <span class="close_line"></span>
           </div>
-          <li><a href="#home">Home</a></li>
           <li><a href="#sobre">Sobre a rocky</a></li>
-          <li><a href="#servicos">Serviços</a><a href=""> ▼</a></li>
-          <li><a href="#diferenciais">Diferenciais</a><a href=""> ▼</a></li>
+          <li><a href="#servicos">Serviços</a></li>
+          <li><a href="#diferenciais">Diferenciais</a></li>
           <li><a href="#">Trabalhe conosco</a></li>
           <li><a href="#contato">Contato</a></li>
           <li><a href="#">Blog</a></li>
         </ul>
       </nav>
-
-      <a href="./index.html"
-        ><img src="./img/web/logo.png" alt="Logo da Rocky"
-      /></a>
 
       <div class="text_header">
         <h1>
@@ -50,145 +49,172 @@
         <button>entre em contato agora</button>
       </div>
     </header>
-    <section id="sobre">
-      <h1>Sobre</h1>
-      <article>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-          rebum. Stet clita kasd gubergren, no sea takimata sanctus est.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-          rebum. Stet clita kasd gubergren, no sea takimata sanctus est.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-          rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
-          ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
-          sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-          dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-          et justo duo dolores et ea rebum. Stet clita
-        </p>
-      </article>
-    </section>
+    <div>
+      <section id="sobre">
+        <h1>Sobre</h1>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+            erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+            et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+            Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+            sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+            et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+            accusam et justo duo dolores et ea rebum. Stet clita
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+            erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+            et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+            Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+            sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+            et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+            accusam et justo duo dolores et ea rebum. Stet clita
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+            erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+            et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+            Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+            sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+            et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+            accusam et justo duo dolores et ea rebum. Stet clita
+          </p>
+        </article>
+      </section>
 
-    <section class="section-servicos" id="servicos">
-      <h1>Serviços</h1>
-      <div>
-        <h5>Serviços</h5>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam
-        </p>
-      </div>
-      <div>
-        <h5>Mídia Digital de Performance</h5>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam
-        </p>
-      </div>
-      <div>
-        <h5>Implementações Tecnológicas</h5>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam
-        </p>
-      </div>
-    </section>
-
-    <section class="section-diferenciais" id="diferenciais">
-      <h1>DIFERENCIAIS</h1>
-      <div>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam voluptua. At vero eos et accusam et justo duo
-        </p>
-      </div>
-      <div>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam voluptua. At vero eos et accusam et justo duo
-        </p>
-      </div>
-      <div>
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam voluptua. At vero eos et accusam et justo duo
-        </p>
-      </div>
-    </section>
-
-    <footer>
-      <div class="logos_rodape">
-        <img src="./img/web/logo.png" alt="Logo da Rocky" />
+      <section class="section-servicos" id="servicos">
+        <h1>Serviços</h1>
         <div>
-          <i class="fab fa-facebook fa-4x"></i>
-          <i class="fab fa-linkedin-in fa-2x"></i>
+          <article>
+            <h5>Serviços</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+              erat, sed diam
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+              erat, sed diam
+            </p>
+          </article>
+          <article>
+            <h5>Mídia Digital de Performance</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+              erat, sed diam
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+              erat, sed diam
+            </p>
+          </article>
+          <article>
+            <h5>Implementações Tecnológicas</h5>
+            <p>
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+              erat, sed diam
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+              erat, sed diam
+            </p>
+          </article>
+        </div>
+      </section>
+
+      <section class="section-diferenciais" id="diferenciais">
+        <h1>DIFERENCIAIS</h1>
+        <div>
+          <article>
+            <img src="./img/medal-solid.svg" />
+            <p>
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+              erat, sed diam voluptua. At vero eos et accusam et justo duo
+            </p>
+          </article>
+          <article>
+            <img src="./img/medal-solid.svg" />
+            <p>
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+              erat, sed diam voluptua. At vero eos et accusam et justo duo
+            </p>
+          </article>
+          <article>
+            <img src="./img/medal-solid.svg" />
+            <p>
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+              erat, sed diam voluptua. At vero eos et accusam et justo duo
+            </p>
+          </article>
+        </div>
+      </section>
+    </div>
+    <footer>
+      <div>
+        <div class="logos_rodape">
+          <img src="./img/web/logo.png" alt="Logo da Rocky" />
+          <div>
+            <i class="fab fa-facebook fa-4x"></i>
+            <i class="fab fa-linkedin-in fa-2x"></i>
+          </div>
+        </div>
+
+        <div class="contato_rodape" id="contato">
+          <i class="fa fa-solid fa-envelope fa-3x"></i>
+          <a href="mailto:contato@rocky.ag" target="_blank">contato@rocky.ag</a>
+          <span>|</span>
+          <i class="fa fa-solid fa-rotate-90 fa-phone fa-3x"></i>
+          <a href="tel:+551533211105" target="_blank">(15) 3321-1105</a>
+        </div>
+        <div class="local-rodape">
+          <img src="./img/content/pin.png" />
+          <a href="https://goo.gl/maps/2DEuFJP4eLojpk246" target="_blank"
+            >R. Romeu do Nascimento, 247 - Jardim Portal da Colina, Sorocaba -
+            SP 18047-410 - 2º andar</a
+          >
+        </div>
+        <div class="rodape-texto">
+          <p>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+            erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+            et ea rebum. Stet clita kasd
+          </p>
+          <p>
+            gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+            erat, sed diam voluptua. At vero eos et a ut
+          </p>
+          <p>
+            ccusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+            no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum
+            dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+            tempor invidunt
+          </p>
         </div>
       </div>
-      <div class="contato_rodape" id="contato">
-        <i class="fa fa-solid fa-envelope fa-3x"></i>
-        <a href="mailto:contato@rocky.ag" target="_blank">contato@rocky.ag</a>
-        <span>|</span>
-        <i class="fa fa-solid fa-rotate-90 fa-phone fa-3x"></i>
-        <a href="tel:+551533211105" target="_blank">(15) 3321-1105</a>
+      <div>
+        <form>
+          <input type="text" placeholder="Nome" />
+          <input type="email" placeholder="E-mail" />
+          <input type="text" placeholder="Investimento Mensal" />
+          <textarea placeholder="Mensagem"></textarea>
+          <button>Enviar mensagem</button>
+        </form>
       </div>
-      <div class="local-rodape">
-        <img src="./img/content/pin.png" />
-        <a href="https://goo.gl/maps/2DEuFJP4eLojpk246" target="_blank"
-          >R. Romeu do Nascimento, 247 - Jardim Portal da Colina, Sorocaba - SP
-          18047-410 - 2º andar</a
-        >
-      </div>
-      <div class="rodape-texto">
-        <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore
-        </p>
-        <p>
-          gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-          Lorem ipsum dolor sit amet,
-        </p>
-        <p>
-          ccusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
-        </p>
-      </div>
-
-      <form>
-        <input type="text" placeholder="Nome" />
-        <input type="email" placeholder="E-mail" />
-        <input type="text" placeholder="Investimento Mensal" />
-        <textarea placeholder="Mensagem"></textarea>
-        <button>Enviar mensagem</button>
-      </form>
     </footer>
   </body>
 
