--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <!-- <link rel="stylesheet" href="css/style.css" type="text/css" /> -->
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <script
       src="https://kit.fontawesome.com/14298cde5f.js"
@@ -23,9 +22,11 @@
           <span class="line"></span>
         </div>
         <ul id="nav_list">
-          <div id="click_close">
-            <span class="close_line"></span>
-            <span class="close_line"></span>
+          <div class="container_close">
+            <div id="click_close">
+              <span class="close_line"></span>
+              <span class="close_line"></span>
+            </div>
           </div>
           <li><a href="#sobre">Sobre a rocky</a></li>
           <li><a href="#servicos">Serviços</a></li>
